--- a/app/globals.css
+++ b/app/globals.css
@@ -36,4 +36,8 @@ a {
   .btn {
     @apply px-3 py-1 border border-black text-black bg-gray-500 rounded-lg;
   }
+
+  .card {
+    @apply w-full flex flex-col gap-4 p-8 border border-gray-500
+  }
 }
